when someone is typing, no longer overlapping

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -11,7 +11,6 @@ body {
 
 main {
     margin-top: 5em;
-    display: flex;
     border-radius: 1em;
     background-color: #fff;
     position: relative;
@@ -31,12 +30,10 @@ button {
     outline: 0;
 }
 
-form {
+.sendMessageContainer {
     border-top: 1px solid rgb(224, 224, 224);
-    position: absolute;
-    bottom: 0;
-    width: 90%;
     display: flex;
+    width: 100%;
     padding: 1em;
 }
 
@@ -74,8 +71,8 @@ form {
 }
 
 #typing {
-    position: absolute;
-    bottom: 0;
-    right: 0;
+   float: right;
+   border: 1px solid #fff;
+   height: 2em;
 }
 
